--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="assets/Logo3.png" alt="Logo">
+            <img src="./assets/kio.png" alt="Logo">
         </div>
         <div class="nav-container">
         <ul class="nav-links">
