--- a/pagina/story2.html
+++ b/pagina/story2.html
@@ -35,7 +35,7 @@
 
     <div class="grid-container">
     <div class="item3">
-        <p>Waardeketens</p>
+        <p>Waardeketenonderzoek</p>
         </div>
         <div class="item4">
 
@@ -53,7 +53,7 @@
             <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Globaliseringsonderzoek</button></a>
             <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Bedrijvendemografie</button></a>
             <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Internationaliseringsmonitor</button></a>
-            <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Nederlandshandelsland</button></a>
+            <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Nederlands handelsland</button></a>
           </div>
         </div>
     </div>
