--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="liftbtn">
     <p>Animatie foto's</p>
     <button class="slidebtn" onclick="showSlideshow(1)">Globaliseringsonderzoek</button>
-    <button class="slidebtn" onclick="showSlideshow(2)">Waardeketens</button>
+    <button class="slidebtn" onclick="showSlideshow(2)">Waardeketenonderzoek</button>
     <button class="slidebtn" onclick="showSlideshow(3)">Bedrijvendemografie</button>
     <button class="slidebtn" onclick="showSlideshow(4)">Internationaliseringsmonitor</button>
     <button class="slidebtn" onclick="showSlideshow(5)">Nederlands handelsland</button>
