--- a/antwoordpagina/story3antwoord.html
+++ b/antwoordpagina/story3antwoord.html
@@ -54,9 +54,9 @@
         <div class="item6">
           <div class="liftbtn">
             <a href="./story4antwoord.html"> <button class="slidebtn">Globaliseringsonderzoek</button></a>
-            <a href="./story4antwoord.html"> <button class="slidebtn">Waardeketensonderzoek</button></a>
+            <a href="./story4antwoord.html"> <button class="slidebtn">Waardeketenonderzoek</button></a>
             <a href="./story4antwoord.html"> <button class="slidebtn">Internationaliseringsmonitor</button></a>
-            <a href="./story4antwoord.html"> <button class="slidebtn">Nederlandshandelsland</button></a>
+            <a href="./story4antwoord.html"> <button class="slidebtn">Nederlands handelsland</button></a>
           </div>
         </div>
     </div>
