--- a/pagina/story1.html
+++ b/pagina/story1.html
@@ -51,10 +51,10 @@
         </div>
         <div class="item6">
           <div class="liftbtn">
-            <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Waardeketensonderzoek</button></a>
+            <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Waardeketenonderzoek</button></a>
             <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Bedrijvendemografie</button></a>
             <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Internationaliseringsmonitor</button></a>
-            <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Nederlandshandelsland</button></a>
+            <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Nederlands handelsland</button></a>
           </div>
         </div>
     </div>
