--- a/pagina/story3.html
+++ b/pagina/story3.html
@@ -51,9 +51,9 @@
         <div class="item6">
           <div class="liftbtn">
             <a href="../antwoordpagina/story4antwoord.html"> <button class="slidebtn">Globaliseringsonderzoek</button></a>
-            <a href="../antwoordpagina/story4antwoord.html"> <button class="slidebtn">Waardeketensonderzoek</button></a>
+            <a href="../antwoordpagina/story4antwoord.html"> <button class="slidebtn">Waardeketenonderzoek</button></a>
             <a href="../antwoordpagina/story4antwoord.html"> <button class="slidebtn">Internationaliseringsmonitor</button></a>
-            <a href="../antwoordpagina/story4antwoord.html"> <button class="slidebtn">Nederlandshandelsland</button></a>
+            <a href="../antwoordpagina/story4antwoord.html"> <button class="slidebtn">Nederlands handelsland</button></a>
           </div>
         </div>
     </div>
