--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <button class="slidebtn" onclick="showSlideshow(2)">Waardeketenonderzoek</button>
     <button class="slidebtn" onclick="showSlideshow(3)">Bedrijvendemografie</button>
     <button class="slidebtn" onclick="showSlideshow(4)">Internationaliseringsmonitor</button>
-    <button class="slidebtn" onclick="showSlideshow(5)">Nederlands handelsland</button>
+    <button class="slidebtn" onclick="showSlideshow(5)">Nederland handelsland</button>
   </div>
 
   <div class="liftbtn">
