--- a/pagina/story1.html
+++ b/pagina/story1.html
@@ -54,7 +54,7 @@
             <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Waardeketenonderzoek</button></a>
             <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Bedrijvendemografie</button></a>
             <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Internationaliseringsmonitor</button></a>
-            <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Nederlands handelsland</button></a>
+            <a href="../antwoordpagina/story2antwoord.html"> <button class="slidebtn">Nederland handelsland</button></a>
           </div>
         </div>
     </div>
