--- a/pagina/story2.html
+++ b/pagina/story2.html
@@ -53,7 +53,7 @@
             <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Globaliseringsonderzoek</button></a>
             <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Bedrijvendemografie</button></a>
             <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Internationaliseringsmonitor</button></a>
-            <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Nederlands handelsland</button></a>
+            <a href="../antwoordpagina/story3antwoord.html"> <button class="slidebtn">Nederland handelsland</button></a>
           </div>
         </div>
     </div>
