--- a/pagina/story5.html
+++ b/pagina/story5.html
@@ -35,7 +35,7 @@
 
     <div class="grid-container">
     <div class="item3">
-        <p>Nederlands handelsland</p>
+        <p>Nederland handelsland</p>
         </div>
         <div class="item4">
 
