--- a/antwoordpagina/story4antwoord.html
+++ b/antwoordpagina/story4antwoord.html
@@ -56,7 +56,7 @@
             <a href="story5antwoord.html"> <button class="slidebtn">Globaliseringsonderzoek</button></a>
             <a href="story5antwoord.html"> <button class="slidebtn">Waardeketenonderzoek</button></a>
             <a href="story5antwoord.html"> <button class="slidebtn">Bedrijvendemografie</button></a>
-            <a href="story5antwoord.html"> <button class="slidebtn">Nederlands handelsland</button></a>
+            <a href="story5antwoord.html"> <button class="slidebtn">Nederland handelsland</button></a>
           </div>
         </div>
     </div>
