--- a/antwoordpagina/story5antwoord.html
+++ b/antwoordpagina/story5antwoord.html
@@ -35,7 +35,7 @@
 
     <div class="grid-container">
     <div class="item3">
-        <p>Het is: Nederlandshandelsland</p>
+        <p>Het is: Nederland handelsland</p>
         <br>
         <br>
         <p>Bekijk de animatie hieronder</p>
